--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <ul >
   <li>Water resources are natural resources of water that are potentially useful as a source of water supply.</p>
   <li>97% of the water on the Earth is salt water and only three percent is fresh water; slightly over two thirds of this is frozen in glaciers and polar ice caps.
+    <li> Artificial sources of fresh water can include treated watewater and desalinated water 
   </ul>
-  
+  <h1> Thank You ... Now go sleep like Jharee </h1>
   
   </body>
 </html>
