--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
 <h1 align="center"> Water Resources </h1>
 <hr>
   <ul >
-  <li>Water resources are natural resources of water that are potentially useful as a source of water supply.</p>
+  <li>Water resources are natural resources of water that are potentially useful as a source of water supply.
+    <br>
   <li>97% of the water on the Earth is salt water and only three percent is fresh water; slightly over two thirds of this is frozen in glaciers and polar ice caps.
+    <br>
     <li> Artificial sources of fresh water can include treated watewater and desalinated water 
+      <br>
+      <li>Water resources are under threat from water scarcity, water pollution, water conflict and climate change.
+        <li> Water is the most abundant natural resource on our planet as it comprises three-fourth of earth's surface.
+            <li> 
+Water is an important resource as it helps in sustaining life on earth.
+      
   </ul>
-  <h1> Thank You ... Now go sleep like Jharee </h1>
+  
   
   </body>
 </html>
