--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 Water is an important resource as it helps in sustaining life on earth.
       
   </ul>
+  <img src="water.jpg" alt="Water" width="500" height="600">
   
   
   </body>
