--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 Water is an important resource as it helps in sustaining life on earth.
       
   </ul>
-  <img src="water.jpg" alt="Water">
+  <img src="water.jpg.jpg" alt="Water">
   
   
   </body>
