--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Water Resources </title>
 </head>
-<body style="background-color:#33ccff">>
+<body style="background-color:#33ccff">
 <h1 align="center"> Water Resources </h1>
 <hr>
 <b>
