--- a/Factors for Water Pollution.html
+++ b/Factors for Water Pollution.html
@@ -4,6 +4,7 @@
 <head>
 <body bgcolor="#33ccff">
 <font face="Gill Sans">
+<imgsrc=water.jpg length="500" width="500">
 <h1 align="center">Factors For Water Pollution </h1>
 <hr size=5 color="black">
 <h2 align="left"><u>Problems Faced Due to water pollution</u></h2>
