--- a/Factors for Water Pollution.html
+++ b/Factors for Water Pollution.html
@@ -3,7 +3,7 @@
 <title>Factors For Water Pollution</title>
 <head>
 <body bgcolor="#33ccff">
-<font face="Gill Sans">
+<font size=6 face="Gill Sans">
 <imgsrc=water.jpg length="500" width="500">
 <h1 align="center">Factors For Water Pollution </h1>
 <hr size=5 color="black">
